[workspace]
resolver = "3"
members = [
    # The main library and application
    "herostratus",
    # Test fixtures
    "herostratus-tests",
]
default-members = ["herostratus", "herostratus-tests"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Notgnoshi/herostratus"
rust-version = "1.89"
description = "**Herostratus** *n.* **1.** An ancient Greek known for seeking fame through crime and destruction. **2.** Also a Git repository achievements engine."

[workspace.dependencies]
assert_cmd = { version = "2.0.14", features = ["color"] }
clap = { version = "4.5.2", features = ["derive"] }
color-eyre = "0.6.2"
ctor = "0.2.7"
directories = "5.0.1"
eyre = "0.6.12"
git2 = "0.19"
gix = { version = "0.67.0", features = ["blob-diff", "blocking-network-client", "credentials", "excludes", "index", "mailmap", "revision", "tracing", "tree-editor"] }
inventory = "0.3.15"
lazy_static = "1.4.0"
predicates = "3.1.0"
serde = { version = "1.0.204", features = ["derive"] }
tempfile = "3.10.1"
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
