[workspace]
resolver = "3"
members = [
    # The main library and application
    "herostratus",
    # Test fixtures
    "herostratus-tests",
]
default-members = ["herostratus", "herostratus-tests"]

[profile.bench]
debug = true

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Notgnoshi/herostratus"
rust-version = "1.89"
description = "**Herostratus** *n.* **1.** An ancient Greek known for seeking fame through crime and destruction. **2.** Also a Git repository achievements engine."

[workspace.dependencies]
assert_cmd = { version = "2.0.17", features = ["color"] }
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
ctor = "0.6.0"
directories = "6.0.0"
eyre = "0.6.12"
gix = { version = "0.75.0", features = ["blob-diff", "blocking-network-client", "credentials", "excludes", "index", "mailmap", "revision", "tracing", "tree-editor", "blocking-http-transport-reqwest-rust-tls"] }
gungraun = "0.17.0"
inventory = "0.3.21"
predicates = "3.1.3"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.21.0"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
