[workspace]
resolver = "3"
members = [
    # The main library and application
    "herostratus",
    # Quine commit finder
    "herostratus-quine",
    # Test fixtures
    "herostratus-tests",
]
default-members = ["herostratus", "herostratus-tests", "herostratus-quine"]

[profile.bench]
debug = true

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Notgnoshi/herostratus"
rust-version = "1.89"
description = "**Herostratus** *n.* **1.** An ancient Greek known for seeking fame through crime and destruction. **2.** Also a Git repository achievements engine."

[workspace.dependencies]
assert_cmd = { version = "2.0.17", features = ["color"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
csv = "1.3"
ctor = "0.6.0"
directories = "6.0.0"
eyre = "0.6.12"
gix = { version = "0.80.0", features = ["blob-diff", "blocking-network-client", "credentials", "excludes", "index", "mailmap", "revision", "tracing", "tree-editor", "blocking-http-transport-reqwest-rust-tls"] }
gungraun = "0.17.0"
indicatif = "0.18.4"
inventory = "0.3.21"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rayon = "1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10"
tempfile = "3.21.0"
thread_local = "1.1"
toml = "0.9.5"
tracing = "0.1.41"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"
