[package]
name = "herostratus-quine"
description.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
generic-array.workspace = true
git2.workspace = true
sha1.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
