[package]
name = "herostratus-tests"
description.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
herostratus.path = "../herostratus"

assert_cmd.workspace = true
ctor.workspace = true
eyre.workspace = true
git2.workspace = true
lazy_static.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
predicates.workspace = true
