[package]
name = "herostratus-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
herostratus.path = "../herostratus"

assert_cmd.workspace = true
ctor.workspace = true
eyre.workspace = true
gix.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
