[package]
name = "herostratus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
# Set by the CI pipeline using --all-features. Used to conditionally enable/disable tests
ci = []

[dependencies]
clap.workspace = true
color-eyre.workspace = true
directories.workspace = true
eyre.workspace = true
git2.workspace = true
inventory.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
herostratus-tests.path = "../herostratus-tests"
predicates.workspace = true
