[package]
name = "herostratus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bench]]
name = "herostratus-bench"
path = "benches/main.rs"
harness = false

[features]
# Set by the CI pipeline using --all-features. Used to conditionally enable/disable tests
ci = []

[dependencies]
clap.workspace = true
color-eyre.workspace = true
directories.workspace = true
eyre.workspace = true
gix.workspace = true
inventory.workspace = true
serde.workspace = true
tempfile.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# Also needs gungraun-runner and valgrind installed on your system
gungraun.workspace = true
herostratus-tests.path = "../herostratus-tests"
predicates.workspace = true
