[package]
name = "herostratus"
version.workspace = true
default-run = "herostratus"
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[[bench]]
name = "bench-cli"
path = "benches/cli.rs"
harness = false

[[bench]]
name = "bench-whitespace"
path = "benches/whitespace.rs"
harness = false

[features]
# Set by the CI pipeline using --all-features. Used to conditionally enable/disable tests
ci = []

[dependencies]
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
csv.workspace = true
deunicode.workspace = true
directories.workspace = true
eyre.workspace = true
gix.workspace = true
inventory.workspace = true
minijinja.workspace = true
rayon.workspace = true
rustrict.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thread_local.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# Also needs gungraun-runner and valgrind installed on your system
gungraun.workspace = true
herostratus-tests.path = "../herostratus-tests"
predicates.workspace = true
pretty_assertions.workspace = true
